# portal

./: .bowerrc  .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .eslintrc  .flake8  .gitignore  .prettierrc  .pylintrc  .tern-project  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  README.rst  bower.json  cms.analyzer  cms.data  cms.mapping  datadump.json  db.sqlite3.bak  des-files.analyzer  des-files.mapping  des-publications.analyzer  des-publications.data  des-publications.mapping  des-publications_legacy.analyzer  des-publications_legacy.mapping  designsafe.env.sample  docker-compose-dev.yml  docker-compose-http.yml  docker-compose-native-ef.yml  docker-compose-native.yml  docker-compose-prod.yml  docker-compose-qa.yml  docker-compose.yml  (+13 more)
.docs/: Makefile
.docs/source/: conf.py  designsafe.apps.accounts.migrations.rst  designsafe.apps.accounts.rst  designsafe.apps.api.agave.filemanager.rst  designsafe.apps.api.agave.models.rst  designsafe.apps.api.agave.models.systems.rst  designsafe.apps.api.agave.rst  designsafe.apps.api.agave.tests.rst  designsafe.apps.api.data.abstract.rst  designsafe.apps.api.data.agave.elasticsearch.rst  designsafe.apps.api.data.agave.rst  designsafe.apps.api.data.agave.tests.rst  designsafe.apps.api.data.box.rst  designsafe.apps.api.data.box.tests.rst  designsafe.apps.api.data.rst  designsafe.apps.api.external_resources.box.filemanager.rst  designsafe.apps.api.external_resources.box.models.rst  designsafe.apps.api.external_resources.box.rst  designsafe.apps.api.external_resources.dropbox.filemanager.rst  designsafe.apps.api.external_resources.dropbox.models.rst  designsafe.apps.api.external_resources.dropbox.rst  designsafe.apps.api.external_resources.rst  designsafe.apps.api.migrations.rst  designsafe.apps.api.notifications.rst  designsafe.apps.api.notifications.views.rst  designsafe.apps.api.projects.managers.rst  designsafe.apps.api.projects.rst  designsafe.apps.api.public_data.rst  designsafe.apps.api.rst  designsafe.apps.api.search.rst  designsafe.apps.api.tasks.reindexing.rst  designsafe.apps.api.users.rst  designsafe.apps.applications.rst  designsafe.apps.auth.migrations.rst  designsafe.apps.auth.rst  designsafe.apps.auth.templatetags.rst  designsafe.apps.box_integration.migrations.rst  designsafe.apps.box_integration.rst  designsafe.apps.box_integration.tests.rst  designsafe.apps.cms_plugins.migrations.rst  (+37 more)
.github/: pull_request_template.md  review_template.md
.github/hooks/: pre-commit  pre-push
.github/workflows/: main.yml
client/: .eslintrc.base.json  .eslintrc.json  .prettierignore  README.md  index.html  migrations.json  nx.json  package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
client/cache/: file-map.json  lockfile.hash  nx_files.nxt  project-graph.json
client/e2e/: .eslintrc.json  playwright.config.ts  project.json
client/src/: main.tsx  styles.css
conf/: .bashrc  dhparam.pem  dummy.crt  dummy.key  error.html  gzip.conf  newrelic.ini  nginx-native.conf  nginx-prod.conf  nginx-qa.conf  nginx-tls.conf  nginx.conf  rabbitmq.sample.conf  redis.sample.conf  supervisor.conf  uwsgi.ini  uwsgi_websocket.ini
conf/deploy/: .env.sample  docker-compose.all.yml  docker-compose.web.yml  docker-compose.worker.yml  nginx.conf  post-deploy.sh  rabbitmq.env.sample  uwsgi_params
conf/deprecated/: docker-compose-native-ef.yml  docker-compose-native.yml  nginx-qa-ef.conf  nginx-qa.conf
conf/docker/: Dockerfile  colorize_logs.awk  docker-compose-build.yml  docker-compose-dev.all.debug.m1.yml  docker-compose-dev.all.debug.yml  docker-compose-dev.all.yml  docker-compose-dev.yml  docker-compose.backup.yml  docker-compose.yml
conf/elasticsearch/: elasticsearch.sample.yml  elasticsearch.yml  log4j2.properties  logging.sample.yml
conf/env_files/: designsafe.sample.env  external_resource_secrets.sample.py  mysql.sample.env  ngrok.sample.env  rabbitmq.sample.env
conf/nginx/: colorize_nginx.awk  designsafe.dev.conf  designsafe.dev.crt  designsafe.dev.key  designsafe.dev.p12  designsafe.dev.pem  error.html  nginx.conf  nginx.debug.conf
conf/ngrok/: ngrok.sample.yml
conf/uwsgi/: uwsgi.ini  uwsgi_ef.ini  uwsgi_websocket.ini
designsafe/: LoginTest.py  __init__.py  asgi.py  box_settings.py  celery.py  celery_app.py  celery_settings.py  cms_urls.py  common_settings.py  conftest.py  connections.py  context_processors.py  ef_http_debug_settings.py  elasticsearch_settings.py  external_resource_settings.py  http_debug_settings.py  middleware.py  nees_settings.py  routing.py  rt_settings.py  settings.py  sitemaps.py  storage.py  test_settings.py  tests.py  urls.py  views.py  webhooks.py  wsgi.py  wsgi_websocket.py
designsafe/apps/: README.md
designsafe/fixtures/: auth.json  user-data.json
designsafe/libs/: README.md
designsafe/settings/: __init__.py  celery_settings.py  common.py  common_settings.py  ef_http_debug_settings.py  elasticsearch_settings.py  external_resource_secrets.sample.py  external_resource_settings.py  http_debug_settings.py  nco_mongo.py  nees_settings.py  rt_settings.py  test_settings.py
designsafe/sites/: fiu-ef.py  fiu_ef.py  lehigh-ef.py  lehigh_ef.py  oregonstate-ef.py  oregonstate_ef.py  rapid_fac.py  ucdavis-ef.py  ucdavis_ef.py  ucsd_ef.py  ufl_ef.py  utexas_ef.py
designsafe/templates/: 403.html  404.html  500.html  base.html  base.j2  base_angular.html  cms_breadcrumbs.html  cms_homepage.html  cms_page.html  cms_page_for_app.html  cms_page_no_footer.html  ef_base.html  ef_cms_page.html  google_verification.html  maintenance.html  ramp_verification.html  uber_base.html
designsafe/templatetags/: __init__.py  cascade_extras.py
designsafe/utils/: encryption.py  system_access.py
docs/: Makefile  conf.py  index.rst
dsapi/agave/: agave.py  daos.py  files.py  (+3 more)
etc/: designsafe-ef.service  designsafe.service
meetings/: cms_plugins.py  models.py  urls.py
requirements/: cms.in  cms.txt  dev.in  dev.txt  prod.in  prod.txt
specs/: api.yml
tas/: backends.py
(+2378 files in other folders)
