[tool.poetry]
name = "designsafe"
version = "6.0"
description = ""
authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.8.0"
agavepy = "1.0.0a12"
Django = "^3.2"
cryptography = "^2.3.1"
django-cms = "^3.11.3 "
importlib-resources = "^5.4.0"
django-filer = "^2.2"
django-formtools = "2.2"
django-haystack = "3.2.1"
django-impersonate = "1.5.1"
django-treebeard = "4.3.1"
django-sekizai = "2.0.0"
django-termsandconditions = "^1.2.15"
django-websocket-redis = { git = "https://github.com/jarosenb/django-websocket-redis", rev = "1e429c1334a2719a6c4195d6151f4db84eece591" }
google-api-python-client = "^2.33.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
boxsdk = "^2.9.0"
celery = "^5.0.5"
uWSGI = "^2.0.20"
uwsgitop = "^0.11"
python-magic = "^0.4.13"
rt = "^1.0.8"
PyJWT = "^1.4.2"
pymongo = "^3.9.0"
ipython = "^6"
ipdb = "^0.12"
elasticsearch = "^7.5.1"
elasticsearch-dsl = "^7.1.0"
dropbox = "10.6.0"
django-recaptcha2 = "1.4.1"
djangocms-snippet = "3.0.0"
django-bootstrap3 = "^23.4"
djangocms-text-ckeditor = "^5.1"
djangocms-cascade = { git = "https://github.com/DesignSafe-CI/djangocms-cascade", rev = "ab9cf3f6babdc498979c304a801fcef70932adde" }
djangocms-style = "3.0.0"
djangocms-video = "3.0.0"
djangocms-picture = "^3.0.0"
djangocms-file = "3.0.0"
djangocms-forms-maintained = { git = "https://github.com/avryhof/djangocms-forms", rev = "d8a69efd2f447ee2f940c7b6f5b8b088c9cb79ed" }
djangocms-googlemap = "2.0.0"
oauth2client = "^4.1.2"
mysqlclient = "^1.4.6"
psycopg2 = "2.8.6"
jsonpickle = "^0.9.6"
stone = "^3.2.1"
python-memcached = "^1.59"
django-ipware = "^1.1.6"
pytest = "^5.4.3"
pytest-django = "^3.7.0"
pytest-asyncio = "^0.14.0"
black = "^21.12b0"
pylint = "^2.12.2"
mock = "^4.0.3"
requests-mock = "^1.9.3"
pytest-mock = "^3.6.1"
pytest-cov = "^2.10.0"
ExifRead = "^2.3.2"
opf-fido = "1.4.1"
asgiref = "^3.6.0"
importlib-metadata = "2.1.3"
django-select2 = "6.3.1"
djangocms-admin-style = "~3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
